Copied schema validation from ruuvitracker_server.